// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentForm /> should render correctly 1`] = `
<div
  className=""
  id="CommentForm"
  style={
    Object {
      "marginTop": "10px",
      "padding": "5px",
    }
  }
>
  <Connect(UserAvatarDeprecated)
    className="pull-left"
    user={null}
  />
  <div
    className="opinion__data"
  >
    <form
      onSubmit={[Function]}
    >
      <Field
        aria-label="comment.write"
        component={[Function]}
        name="body"
        onChange={[Function]}
        placeholder="comment.write"
        rows="2"
        type="textarea"
      />
      <div>
        <div>
          <Row
            bsClass="row"
            componentClass="div"
          >
            <Col
              bsClass="col"
              componentClass="div"
              md={6}
              sm={12}
            >
              <p>
                <FormattedMessage
                  id="comment.with_my_account"
                  values={Object {}}
                />
              </p>
              <Connect(InjectIntl(RegistrationButton)) />
               
              <InjectIntl(Connect(LoginButton))
                className="btn-darkest-gray navbar-btn btn--connection"
              />
              <h5>
                <FormattedMessage
                  id="comment.why_create_account"
                  values={Object {}}
                />
              </h5>
              <ul
                className="excerpt small"
              >
                <li>
                  <FormattedMessage
                    id="comment.create_account_reason_1"
                    values={Object {}}
                  />
                </li>
                <li>
                  <FormattedMessage
                    id="comment.create_account_reason_2"
                    values={Object {}}
                  />
                </li>
                <li>
                  <FormattedMessage
                    id="comment.create_account_reason_3"
                    values={Object {}}
                  />
                </li>
              </ul>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              md={6}
              sm={12}
            >
              <p>
                <FormattedMessage
                  id="comment.without_account"
                  values={Object {}}
                />
              </p>
              <Field
                component={[Function]}
                help="comment.public_name"
                id="authorName"
                label="global.fullname"
                name="authorName"
                type="text"
              />
              <Field
                component={[Function]}
                help="comment.email_info"
                id="authorEmail"
                label="global.hidden_email"
                name="authorEmail"
                type="email"
              />
              <Button
                active={false}
                block={false}
                bsClass="btn"
                bsStyle="primary"
                className="btn--comment"
                disabled={true}
                id="comment-submit"
                type="submit"
              >
                <FormattedMessage
                  id="comment.submit"
                  values={Object {}}
                />
              </Button>
            </Col>
          </Row>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<CommentForm /> should render correctly with user 1`] = `
<div
  className=""
  id="CommentForm"
  style={
    Object {
      "marginTop": "10px",
      "padding": "5px",
    }
  }
>
  <Connect(UserAvatarDeprecated)
    className="pull-left"
    user={
      Object {
        "displayName": "admin",
      }
    }
  />
  <div
    className="opinion__data"
  >
    <form
      onSubmit={[Function]}
    >
      <Field
        aria-label="comment.write"
        component={[Function]}
        name="body"
        onChange={[Function]}
        placeholder="comment.write"
        rows="2"
        type="textarea"
      />
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="primary"
        className="btn--comment"
        disabled={true}
        type="submit"
      >
        <FormattedMessage
          id="comment.submit"
          values={Object {}}
        />
      </Button>
    </form>
  </div>
</div>
`;
